--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,12 @@ djangorestframework>=3.15,<4.0
 drf-spectacular>=0.27,<1.0
 django-cors-headers>=4.3,<5.0
 
-# Database (production)
+# Database
 psycopg2-binary>=2.9,<3.0
+dj-database-url>=2.1,<3.0
+
+# Static files (production)
+whitenoise>=6.6,<7.0
 
 # Environment management
 python-dotenv>=1.0,<2.0
